default/objects/Tankkarten__c/Tankkarten__c.object-meta.xml
<CustomObject>
    <label>Card</label>
    <nameField>
        <displayFormat>TK-{000000}</displayFormat>
        <label>Tankkarten</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>