default/objects/Tankkarten__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tankkarten</relationshipLabel>
    <relationshipName>Tankkarten</relationshipName>
    <type>Lookup</type>
</CustomField>