default/objects/Tankkarten__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <externalId>true</externalId>
    <label>Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>