default/objects/Tankkarten__c/fields/Daily_limit_count__c.field-meta.xml
<CustomField>
    <fullName>Daily_limit_count__c</fullName>
    <label>Daily limit count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>