default/objects/Tankkarten__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <label>Driver Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>