default/objects/Tankkarten__c/fields/Fahrzeugtyp__c.field-meta.xml
<CustomField>
    <fullName>Fahrzeugtyp__c</fullName>
    <label>Fahrzeugtyp</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PKW</fullName>
            </value>
            <value>
                <fullName>LKW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>