default/objects/Tankkarten__c/fields/Firmenname_auf_der_Karte__c.field-meta.xml
<CustomField>
    <fullName>Firmenname_auf_der_Karte__c</fullName>
    <label>Firmenname auf der Karte (maximal 25 Zei</label>
    <length>25</length>
    <type>Text</type>
</CustomField>