default/objects/Tankkarten__c/fields/Fuel_consumption_per_card_daily__c.field-meta.xml
<CustomField>
    <fullName>Fuel_consumption_per_card_daily__c</fullName>
    <label>Fuel consumption per card (daily)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>