default/objects/Tankkarten__c/fields/Gewuenschter_Kartentyp__c.field-meta.xml
<CustomField>
    <fullName>Gewuenschter_Kartentyp__c</fullName>
    <label>Gewünschter Kartentyp</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Network Card -- International</fullName>
            </value>
            <value>
                <fullName>Multi Network Card -- International</fullName>
            </value>
            <value>
                <fullName>Single Network Card -- National</fullName>
            </value>
            <value>
                <fullName>Multi Network Card -- National</fullName>
                <default>true</default>
                <label>Multi Network Card -- National</label>
            </value>
            <value>
                <fullName>Lotos Biznes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>