default/objects/Tankkarten__c/fields/Gross__c.field-meta.xml
<CustomField>
    <fullName>Gross__c</fullName>
    <formula>UPPER( KFZ_Kennzeichen_oder_Fahrername__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross</label>
    <type>Text</type>
</CustomField>