default/objects/Tankkarten__c/fields/KFZ_Kennzeichen_oder_Fahrername__c.field-meta.xml
<CustomField>
    <fullName>KFZ_Kennzeichen_oder_Fahrername__c</fullName>
    <label>KFZ- Kennzeichen</label>
    <length>16</length>
    <type>Text</type>
</CustomField>