default/objects/Tankkarten__c/fields/Kilometerstand_Abfrage__c.field-meta.xml
<CustomField>
    <fullName>Kilometerstand_Abfrage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kilometerstand- Abfrage</label>
    <type>Checkbox</type>
</CustomField>