default/objects/Tankkarten__c/fields/Monetary_daily_limit__c.field-meta.xml
<CustomField>
    <fullName>Monetary_daily_limit__c</fullName>
    <label>Monetary daily limit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>