default/objects/Tankkarten__c/fields/Monetary_monthly_limit__c.field-meta.xml
<CustomField>
    <fullName>Monetary_monthly_limit__c</fullName>
    <label>Monetary monthly limit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>