default/objects/Tankkarten__c/fields/Monetary_weekly_limit__c.field-meta.xml
<CustomField>
    <fullName>Monetary_weekly_limit__c</fullName>
    <label>Monetary weekly limit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>