default/objects/Tankkarten__c/fields/Monthly_limit_count__c.field-meta.xml
<CustomField>
    <fullName>Monthly_limit_count__c</fullName>
    <label>Monthly limit count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>