default/objects/Tankkarten__c/fields/Monthly_limit_per_card_PLN__c.field-meta.xml
<CustomField>
    <fullName>Monthly_limit_per_card_PLN__c</fullName>
    <formula>Fuel_consumption_per_card_monthly__c * 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly limit per card (PLN)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>