default/objects/Tankkarten__c/fields/Produktbezugskategorie__c.field-meta.xml
<CustomField>
    <fullName>Produktbezugskategorie__c</fullName>
    <label>Produktbezugskategorie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 Diesel, Tunnel-, Maut- und Fährgebühren</fullName>
            </value>
            <value>
                <fullName>1 Alle Kraftstoffe, Tunnel-, Maut- und Fährgebühren</fullName>
            </value>
            <value>
                <fullName>2 Kategorie 1 plus fahrzeugbezogene Waren und Dienstleistungen (Öle, Autowäsche)</fullName>
            </value>
            <value>
                <fullName>3 Kategorie 2 plus alle Shopartikel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>