default/objects/Tankkarten__c/fields/Weekly_limit_count__c.field-meta.xml
<CustomField>
    <fullName>Weekly_limit_count__c</fullName>
    <label>Weekly limit count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>