default/objects/Tankkarten__c/fields/Zusatzinformation__c.field-meta.xml
<CustomField>
    <fullName>Zusatzinformation__c</fullName>
    <inlineHelpText>Angabe einer Kostenstelle, Abteilung o.ä.</inlineHelpText>
    <label>Zusatzinformation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>