default/objects/Tankkarten__c/recordTypes/Card.recordType-meta.xml
<RecordType>
    <fullName>Card</fullName>
    <active>true</active>
    <label>Card</label>
</RecordType>