default/objects/Tankkarten__c/recordTypes/HU_Cards.recordType-meta.xml
<RecordType>
    <fullName>HU_Cards</fullName>
    <active>true</active>
    <description>temporary solution. View for HU cards</description>
    <label>HU Cards</label>
</RecordType>