default/objects/Tankkarten__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Firmenname_auf_der_Karte__c</columns>
    <columns>Produktbezugskategorie__c</columns>
    <columns>Gewuenschter_Kartentyp__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
    <language>de</language>
</ListView>